kubernetes/manifests/audiobook/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: audiobook
  labels:
    name: audiobook
