kubernetes/manifests/audiobook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobook
  namespace: audiobook
  labels:
    app: audiobook
spec:
  selector:
    app: audiobook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: http
  type: ClusterIP
