kubernetes/manifests/audiobook/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: audiobook-http-route
  namespace: audiobook
  annotations:
    external-dns.alpha.kubernetes.io/hostname: bookshelf.nullservers.com
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
      sectionName: https-wildcard
  hostnames:
    - "bookshelf.nullservers.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: audiobook
          port: 80
